feat: 新增事件增強計算邏輯，顯示最新事件的最大強度及增強倍數

--- a/dashboard_v02.html
+++ b/dashboard_v02.html
@@ -453,7 +453,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_offworld_expansion'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_offworld_expansion'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto</td><td>0.7342</td><td>1.8574</td><td>4.7316</td><td>1</td><td>—</td></tr>
 <tr><td>identity_data</td><td>0.6719</td><td>0.7401</td><td>2.8034</td><td>1</td><td>—</td></tr>
@@ -474,7 +476,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_monetary_infrastructure'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_monetary_infrastructure'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto</td><td>0.6253</td><td>1.6429</td><td>2.5709</td><td>1</td><td>—</td></tr>
 <tr><td>offworld_expansion</td><td>0.4496</td><td>0.7883</td><td>1.4648</td><td>1</td><td>—</td></tr>
@@ -495,7 +499,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_civilization_resilience'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_civilization_resilience'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto</td><td>0.7066</td><td>1.3733</td><td>4.2351</td><td>1</td><td>—</td></tr>
 <tr><td>offworld_expansion</td><td>0.5260</td><td>0.7126</td><td>3.3802</td><td>1</td><td>—</td></tr>
@@ -516,7 +522,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_human_manifesto'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_human_manifesto'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>civilization_resilience</td><td>0.7420</td><td>0.9476</td><td>2.2547</td><td>1</td><td>—</td></tr>
 <tr><td>offworld_expansion</td><td>0.5200</td><td>0.6718</td><td>3.2740</td><td>1</td><td>—</td></tr>
@@ -537,7 +545,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_identity_data'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_identity_data'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto</td><td>0.6560</td><td>1.5652</td><td>3.9981</td><td>1</td><td>—</td></tr>
 <tr><td>offworld_expansion</td><td>0.5920</td><td>0.7117</td><td>2.8618</td><td>1</td><td>—</td></tr>
@@ -558,7 +568,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_synthetic_systems'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_synthetic_systems'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>offworld_expansion</td><td>0.3685</td><td>0.5261</td><td>1.0159</td><td>1</td><td>—</td></tr>
 <tr><td>identity_data</td><td>0.4989</td><td>0.4770</td><td>11.1081</td><td>1</td><td>—</td></tr>
@@ -579,7 +591,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_algorithmic_governance'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_algorithmic_governance'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto</td><td>0.7769</td><td>1.0321</td><td>4.9370</td><td>1</td><td>—</td></tr>
 <tr><td>offworld_expansion</td><td>0.8538</td><td>0.2975</td><td>2.4410</td><td>1</td><td>—</td></tr>
@@ -600,7 +614,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_civilization'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_civilization'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>synthetic_systems</td><td>0.5402</td><td>0.3572</td><td>8.9756</td><td>1</td><td>—</td></tr>
 <tr><td>monetary_infrastructure</td><td>0.4963</td><td>0.2857</td><td>7.4124</td><td>1</td><td>—</td></tr>
@@ -621,7 +637,9 @@ a:hover{text-decoration:underline}
 <td><button class='top3-btn' data-target='top3_governance'>Top-3</button></td>
 </tr>
 <tr class='top3-row' id='top3_governance'><td colspan='11'>
-<div class='top3-box'><table class='top3-table'>
+<div class='top3-box'>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>push_sum</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>synthetic_systems</td><td>0.5405</td><td>0.3201</td><td>5.5869</td><td>1</td><td>—</td></tr>
 <tr><td>monetary_infrastructure</td><td>0.5982</td><td>0.1955</td><td>12.0609</td><td>1</td><td>—</td></tr>
