feat: 新增事件增強計算邏輯，優化事件處理及儀表板顯示

--- a/dashboard_v02.html
+++ b/dashboard_v02.html
@@ -455,7 +455,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_offworld_expansion'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.7342</td><td>1.8574</td><td>1.8574</td><td>4.7316</td><td>1</td><td>—</td></tr>
@@ -479,7 +479,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_monetary_infrastructure'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.6253</td><td>1.6429</td><td>1.6429</td><td>2.5709</td><td>1</td><td>—</td></tr>
@@ -503,7 +503,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_civilization_resilience'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.7066</td><td>1.3733</td><td>1.3733</td><td>4.2351</td><td>1</td><td>—</td></tr>
@@ -527,7 +527,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_human_manifesto'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>civilization_resilience<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.7420</td><td>0.9476</td><td>0.9476</td><td>2.2547</td><td>1</td><td>—</td></tr>
@@ -551,7 +551,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_identity_data'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.6560</td><td>1.5652</td><td>1.5652</td><td>3.9981</td><td>1</td><td>—</td></tr>
@@ -575,7 +575,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_synthetic_systems'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>offworld_expansion<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.3685</td><td>0.5261</td><td>0.5261</td><td>1.0159</td><td>1</td><td>—</td></tr>
@@ -599,7 +599,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_algorithmic_governance'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>human_manifesto<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.7769</td><td>1.0321</td><td>1.0321</td><td>4.9370</td><td>1</td><td>—</td></tr>
@@ -623,7 +623,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_civilization'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>synthetic_systems<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.5402</td><td>0.3572</td><td>0.3572</td><td>8.9756</td><td>1</td><td>—</td></tr>
@@ -647,7 +647,7 @@ a:hover{text-decoration:underline}
 </tr>
 <tr class='top3-row' id='top3_governance'><td colspan='11'>
 <div class='top3-box'>
-<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (max_strength=0.0 on latest events date)</div>
+<div class='muted' style='margin:2px 0 8px'>event_boost = <b>x1.00</b> (decayed_strength=0.00 at latest ts)</div>
 <table class='top3-table'>
 <thead><tr><th>src_series</th><th>share_sum</th><th>base_score</th><th>boosted_score</th><th>push_raw</th><th>edge_n</th><th>domains</th></tr></thead><tbody>
 <tr><td>synthetic_systems<div class='muted'>dst_boost_applied: x1.00</div></td><td>0.5405</td><td>0.3201</td><td>0.3201</td><td>5.5869</td><td>1</td><td>—</td></tr>
